--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "mysql2": "^3.6.5",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sequelize": "^6.35.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
